tests/paczka1/fuzzy1/47138197.err
Error in line 4: j3fFPfcv19 A53 49,2
Error in line 7: j3fFPfcv19 A193 0,5
Error in line 9: j3fFPfcv19 A53 69,3
Error in line 18: zSSTSIZjMZv A463 43,0
Error in line 26: DKVkh9N A53 27,8
Error in line 38: DKVkh9N A463 -3,5
